Edit Build Folder Name

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BuildTestWeb.loader.js";
+      var loaderUrl = buildUrl + "/CityWebGLTest.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/BuildTestWeb.data.br",
-        frameworkUrl: buildUrl + "/BuildTestWeb.framework.js.br",
-        codeUrl: buildUrl + "/BuildTestWeb.wasm.br",
+        dataUrl: buildUrl + "/CityWebGLTest.data.br",
+        frameworkUrl: buildUrl + "/CityWebGLTest.framework.js.br",
+        codeUrl: buildUrl + "/CityWebGLTest.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
